<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/m_vertical_spacing"
              android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/m_horizontal_spacing"
            android:layout_marginBottom="@dimen/m_vertical_spacing"
            android:text="@string/title_palette"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m_padding"
            app:cardBackgroundColor="?android:attr/colorForeground"
            app:cardCornerRadius="@dimen/xs_corner_radius"
            app:cardPreventCornerOverlap="false">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/palettePrimaryDark"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:colorAccent"
                    android:background="?attr/colorPrimary"
                    android:text="@string/primary_dark"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/palettePrimary"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:colorAccent"
                    android:background="?attr/colorPrimary"
                    android:text="@string/primary"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paletteBackground"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:colorAccent"
                    android:background="?android:attr/colorBackground"
                    android:text="@string/background"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paletteAccent"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:attr/textColorPrimary"
                    android:background="?attr/colorAccent"
                    android:text="@string/accent"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paletteNormal"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:textColorSecondaryInverse"
                    android:background="?attr/colorControlNormal"
                    android:text="@string/normal"/>

            <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/paletteForeground"
                    style="@style/PaletteItem"
                    android:layout_weight="1"
                    android:textColor="?android:textColorPrimaryInverse"
                    android:background="?android:attr/colorForeground"
                    android:text="@string/foreground"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>